Use StandardCharsets to define character encoding